theme-adium: implement %messageDirection%

This seems to work fine with the Stockholm which implement this keyword.

https://bugzilla.gnome.org/show_bug.cgi?id=688174